# nodeio

./: .docstr.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: python-package.yml
docs/: mkdocs.yml
docs/docs/: index.md
nodeio/: __init__.py
nodeio/decorators/: benchmark.py  logging.py  validation.py
nodeio/engine/: action.py  arguments.py  base_node.py  configuration.py  graph_handler.py  node_factory.py  node_handler.py  stream.py  stream_handler.py
nodeio/engine/handlers/: graph_async.py  graph_sync.py  graph_utils.py  node_handler.py  stream_handler.py
nodeio/engine/structures/: action.py  arguments.py  stream.py
nodeio/infrastructure/: constants.py  constrained_types.py  exceptions.py  logger.py
nodeio/patterns/: factory.py  singleton.py
tests/decorators/: test_benchmark.py  test_logging.py  test_validation.py
tests/engine/: test_action.py  test_arguments.py  test_base_node.py  test_configuration.py  test_graph_handler.py  test_node_factory.py  test_node_handler.py  test_stream.py  test_stream_handler.py
tests/infrastructure/: test_nodeio_logger.py
tests/patterns/: test_factory.py  test_singleton.py
